# game-of-life

./: CHANGELOG.md  LICENSE  README.md  game-of-life-hs.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Main.hs  Quadtree.hs
