cabal-version:      3.0
name:               game-of-life-hs
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             geraldserafin
maintainer:         serafingerald@protonmail.com
-- copyright:
category:           Simulation
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable game-of-life-hs
    import:           warnings
    main-is:          Main.hs
    other-modules: Quadtree
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, gloss
    hs-source-dirs:   src
    default-language: Haskell2010
